@@ -138,7 +138,7 @@ jobs:
         with:
           micromamba: true
           full-deps: true
-          numpy: numpy=1.21.0
+          numpy: numpy=1.22.3
 
       - name: install
         run: |
