@@ -11,7 +11,7 @@ mmtf-python
 msmb_theme==1.2.0
 netcdf4
 networkx
-numpy>=1.21.0
+numpy>=1.22.3
 packaging
 parmed
 pytest
